[package]
name = "efm-rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Markus Stoller"]
description = "A library to decode and encode efm modulated bytes (Eight-to-Fourteen Modulation)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/markusstoller/efm-rs"

[dependencies]
